# hNetwork

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  BUILD_REPORT.md  Dockerfile  LICENSE  README.md  README_DOCKER.md  bump_version.py  docker-compose.yml  mac-vendor.txt  pyproject.toml  requirements.txt
data/: config.json  ieee_oui.json
hnetwork/: __init__.py  cli.py  config.py  detection.py  interfaces.py  oui.py  scanner.py  web.py
hnetwork/templates/: index.html
